progress on theming & tests

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,4 +1,5 @@
 // @import '../node_modules/antd/dist/antd.css';
+@import url('https://fonts.googleapis.com/css?family=Be+Vietnam&display=swap');
 
 body {
   margin: 0;
